# miniMind

./: pyproject.toml
dataset/: lm_dataset.py
model/: model_minimind.py
