[project]
name = "minimind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "torch==1.13.1+cu117",
    "transformers==4.36.0",
]


[[tool.uv.index]]
name = "pytorch-cu117"
url = "https://download.pytorch.org/whl/cu117"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu117" }]
